# suntech1

./: Pdf word.py  abc.py  agentic.py  agents.py  calculate_dynamic_y_tolerance.py  clean_pdf.py  code.py  convert_xml.py  determine_headers.py  determine_headers1.py  determine_headers2.py  determine_headers3.py  document_layout_analysis.py  document_layout_analysis1.py  excel_mapper.py  excel_reader.py  excel_reader4.py  excel_reader5.py  final_regex_implementation.py  find_text_by_size.py  font_map.py  font_sizes.py  font_sizes1.py  ggggg.py  move_file.sh  move_file1.sh  move_files.sh  only_header_logic.py  pdf_parser_generalised.py  pdf_parser_generalised1.py  pdf_table_extractor.py  pdf_to_table.py  pdf_to_table1.py  pdf_to_table2.py  pdf_to_table3.py  pdf_to_table4.py  pymupdf1.py  pyproject.toml  queries.txt  reconstructed_pdfs.py  (+10 more)
DataLabeling/: adi_to_labelbox1.py  adi_to_labelbox_test.py  agent_code.txt  aiml_role.txt  helper_method.py  hf_removal2_tol2.py  hf_remove.py  hf_remove1.py  hf_remove2.py  hf_remove2_tolerance.py  hf_remove2_tolerance1.py  internet.txt  messy_data.py  rust_p1_v1.0.rs  test_tsvs.py  test_tsvs1.py  test_tsvs2.py  text_extract.rs
DeepLearn/: test1.py
ETL/: audit_trail.py  confusion_matrix.py  delta_load_sheet.py  doc_id_logic.py  final_merge.py  get_global_docid.py  load_golden_data.py  load_to_temp.py  load_to_temp1.py  metrics.py  new.py  new1.py  read_config.py  read_config1.py  read_config2.py  read_config3.py  read_excel.py  read_excel1.py  read_excel2.py  read_excel_master.py  test123.py  test1234.py  test12345.py  test123456.py  (+7 more)
(+101 files in other folders)
